--- a/simContainer/Dockerfile_test
+++ b/simContainer/Dockerfile_test
@@ -9,9 +9,14 @@ RUN apt-get install -y net-tools
 RUN apt install -y iproute2
 RUN apt-get install -y libxml2
 RUN apt-get install -y libx11-dev
+RUN apt-get install -y libpng16-16
 RUN apt install -y libxext6
 RUN apt-get install -y libxfixes-dev
 RUN apt-get install -y libxft2
+RUN apt-get install -y python3
+RUN apt-get install -y pip
+RUN pip install serial
+RUN pip install pynput
 
 
 RUN chmod +x Autopilot
@@ -20,4 +25,4 @@ RUN chmod +x start.sh
 
 EXPOSE 8000
 
-CMD "./start.sh"
+CMD "./start_test.sh"
